--- a/app/views/cause/new.html.erb
+++ b/app/views/cause/new.html.erb
@@ -24,119 +24,13 @@
 	                                <h2>Tell us about your cause</h2>
 	                            </div>
 
-						<div class="form-body">
+						      <div class="form-body">
                                 <%= form_for(@cause, :url => {:action => 'create'}, :html => {:class => 'sky-form', :id => "myform"}) do |f| %>
 
-                                    <% if @cause.errors.any? %>
-                                      <div class="alert alert-danger fade in">
-                                        <p><b>Please correct the following <%= pluralize(@cause.errors.count, "error") %>:</b></p>
-                                     
-                                        <ul>
-                                        <% @cause.errors.messages.values.each do |msg| %>
-                                            <%msg.each do  |m| %>
-                                                <li><%= m %></li>
-                                            <%end %>
-                                        <% end %>
-                                        </ul>
-                                      </div>
-                                    <% end %>
+                                    <%= render(:partial => "cause_form", :locals => {:f => f}) %>
 
 
-                                    <fieldset class="no-padding"> 
-
-                                     <section class="no-margin">
-                                            <div class="row">
-
-                                                <section class="col-xs-12">
-                                                   
-                                                	<label>What is the name of your cause?</label>
-                                                    <label class="input">
-
-                                                        <i class="icon-append fa fa-user"></i>
-                                                        <%= f.text_field :charityname, :placeholder=>"Cause Name" %>                                               
-                                                    </label>
-                                                
-                                                    <br/>
-                                                    
-
-                                                    <label>What is the URL of your cause?</label>
-                                                    <label class="input">
-
-                                                        <i class="icon-append fa fa-globe"></i>
-                                                        <%= f.text_field :website, :placeholder=>"Website" %>                                                       
-                                                    </label>
-
-                                                    <br/>                                             
-                                                    
-                                                    <label>What is the URL of your facebook page? (Optional)</label>
-                                                    <label class="input">
-                                                    	
-                                                        <i class="icon-append fa fa-globe"></i>
-                                                        <%= f.text_field :facebookurl, :placeholder=>"http://www.facebook.com/mycause" %>
-                                             
-                                                    </label>
-
-                                                    <br/>
-                                                    
-                                                    <label>Description</label>
-                                                    <label class="input">
-					                                    
-					                                    <%= f.text_area :description, :placeholder=>"Brief description of your cause.", :class=>"form-control"  %>
-					                                    
-					                                </label>
-                                           
-                                                    <br/>
-
-                                                    <label>Please upload a logo for your cause.</label>
-                                                    <label class="input">
-                                                    	
-                                                        <i class="icon-append fa fa-upload"></i>
-                                                        <%= f.file_field :logo %>	
-                                             
-                                                    </label>
-
-                                                    <br/>
-
-                                                    <label>Please upload an image for your cause.  This will be used as a banner for your page.  (Optional)</label>
-                                                    <label class="input">
-                                                    	
-                                                        <i class="icon-append fa fa-upload"></i>
-                                                        <%= f.file_field :image1 %>	
-                                             
-                                                    </label>
-
-                                                    <br/>
-
-                                                    <label>Please upload an image for your cause.  This will be used as a banner for your page.  (Optional)</label>
-                                                    <label class="input">
-                                                    	
-                                                        <i class="icon-append fa fa-upload"></i>
-                                                        <%= f.file_field :image2 %>	
-                                             
-                                                    </label>
-
-                                                     <br/>
-
-                                                    <label>Please upload an image for your cause.  This will be used as a banner for your page.  (Optional)</label>
-                                                    <label class="input">
-                                                    	
-                                                        <i class="icon-append fa fa-upload"></i>
-                                                        <%= f.file_field :image3 %>	
-                                             
-                                                    </label>
-                                                      
-                                                </section>
-                                          
-                                            </div>
-
-
-                                        </section>
-
-                                       
-                                    </fieldset>  
-
-                                    <fieldset>
-                                        
+                                    <fieldset>          
                                       
                                         <section>
                                             <div class="row">
@@ -152,6 +46,7 @@
                                                 
                                         </section>
                                     </fieldset>
+
                                 <!--/form-->
                                 <% end %>  
                             </div>
