--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 
 <%= render partial: "layouts/slidebar" %>
 
+<style>
+
+a:link, a:visited, a:hover, a:active {
+    color: #3498db;
+    
+    }
+</style>
+
 <!-- MAIN WRAPPER -->
 <div class="body-wrap">
      <% if !flash[:notice].blank? %>
