--- a/app/views/cause/edit.html.erb
+++ b/app/views/cause/edit.html.erb
@@ -1,8 +1,6 @@
 
        
     <!-- MAIN CONTENT -->
-    	
-
     <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-2.jpg)">
         <div class="wp-section">
             <div class="container">
@@ -25,10 +23,21 @@
 	                            </div>
 
 						      <div class="form-body">
-                                <%= form_for(@cause, :url => {:action => 'update'}, :html => {:class => 'sky-form', :id => "myform"}) do |f| %>
+                                <%= form_for(@cause, :url => {:action => 'update', :id => @cause.charityid}, :method => :POST, :html => {:class => 'sky-form', :id => "myform"}) do |f| %>
 
                                     <%= render(:partial => "cause_form", :locals => {:f => f}) %>
+							
+									
+                                   
+					                   Is approved for accepting gift card donations?&nbsp;&nbsp;               
+					                  <%= f.check_box :isapproved %>
+					                                    
+					                <br/><br/>
 
+					                  Is this a featured cause?&nbsp;&nbsp;           
+					                  <%= f.check_box :isfeatured %>
+					                                    
+					                 
 
                                     <fieldset>          
                                       
@@ -60,79 +69,7 @@
                     </div>
                     <div class="col-md-4">
                     	<!-- SIDEBAR - BLOG -->
-                    	<div class="sidebar">
-	
-							<!-- NEWSLETTER WIDGET -->
-	                        <div class="panel panel-default panel-sidebar-1">
-	                            <div class="panel-heading"><h2>Sign up for our newsletter</h2></div>
-	                            <form class="sky-form" role="form">
-	                                <div class="panel-body">
-	                                    <p>
-	                                        Sign up if you would like to receive occasional treats from us.
-	                                    </p>
-	                                    <section>
-	                                        <div class="form-group">
-	                                            <label class="label sr-only">Password</label>
-	                                            <label class="input">
-	                                                <input type="email" name="email" placeholder="name@example.com">
-	                                            </label>
-	                                        </div>     
-	                                    </section>
-	                                    
-	                                </div>
-	                                <button type="submit" class="btn btn-lg btn-block-bm btn-alt btn-icon btn-icon-right btn-envelope">
-	                                    <span>Sign Me Up</span>
-	                                </button>
-	                            </form>   
-	                        </div>
-
-							<!-- TESTIMONIAL WIDGET --> 
-	                        <div class="panel panel-default panel-sidebar-1">
-	                            <div class="panel-heading"><h2>Testimonials</h2></div>
-	                            <div class="owl-carousel owl-carousel-single">
-	                                <div>
-	                                    <div class="wp-block testimonial style-1 base">
-	                                       
-	                                        <div class="wp-block-body"> 
-	                                            <p>
-	                                                <i class="fa fa-quote-left"></i>Changefindr made it very easy to collect funds through unused gift cards.
-	                                            </p>
-	                                        </div>
-	                                        <div class="testimonial-author light">  
-	                                            
-	                                            <div class="author-info">
-	                                                <span class="author-name">Ounie Phakousonh</span>
-	                                                <small class="author-pos">CoderDojo</small>
-	                                            </div>
-	                                        </div>
-	                                    </div>
-	                                </div>
-	                                
-	                            </div>
-
-	                             <div class="owl-carousel owl-carousel-single">
-	                                <div>
-	                                    <div class="wp-block testimonial style-1 base">
-	                                       
-	                                        <div class="wp-block-body"> 
-	                                            <p>
-	                                                <i class="fa fa-quote-left"></i>Changefindr gives me the opportunity to contribute to my favourite cause even in difficult times.
-	                                            </p>
-	                                        </div>
-	                                        <div class="testimonial-author light">  
-	                                            
-	                                            <div class="author-info">
-	                                                <span class="author-name">Seema Makker</span>
-	                                                <small class="author-pos">Donor</small>
-	                                            </div>
-	                                        </div>
-	                                    </div>
-	                                </div>
-	                                
-	                            </div>
-	                        </div>
-
-    					</div>                    
+                    	<%= render partial: "layouts/sidebar1" %>                   
     				</div>
                 </div>
             </div>
