--- a/app/views/cause/index.html.erb
+++ b/app/views/cause/index.html.erb
@@ -1,6 +1,20 @@
 
 
+   
 
+<section class="slice bg-white animate-hover-slide">
+        <div class="wp-section work">
+            <div class="container">
+
+<div class="input-group merged">
+    <span class="input-group-addon"><i class="icon-append fa fa-search"></i></span>
+    <input class="form-control" style="width:270px" type="text"
+           placeholder="Search For A Cause"
+           name="searchcause"
+           id="searchcause"
+           value="">
+</div>
+         
 
 <div class="row">
 	<div class="col-md-5">
@@ -9,27 +23,6 @@
 </div>	
 
 
-<div class="row">
-	<div class="col-md-5">
-		<%= form_for(Charity, :method => 'get') do |f| %>
-		
-  <% content_tag :label do %>
-    Search term:
-    <%= text_field_tag :search, params[:search] %>
-  <% end %>
-<% end %>
-	</div>
-</div>	
-
-
-
-
-
-<section class="slice bg-white animate-hover-slide">
-        <div class="wp-section work">
-            <div class="container">
-               
-                
                 <div class="row">          
                     <div id="ulSorList">
     
@@ -64,3 +57,57 @@
         	</div>    	
         </div>
     </section>
+
+
+
+<script>
+
+  $("#searchcause").autocomplete({
+
+
+        source: function (request, response) {
+            $.ajax({
+                url: '/cause/causeautocomplete', type: "POST", dataType: "json",
+                data: { searchText: request.term, maxResults: 10 },
+                success: function (data) {
+
+                    console.log('success: ', data)
+
+                    // data is an array of objects and must be transformed for autocomplete to use
+                    var array = data.error ? [] : $.map(data, function (m) {
+                        return {
+                            id: m.charityid,
+                            name: m.charityname,
+                            logo: m.logo
+                            
+                        };
+                    });
+                    response(array);
+
+
+                },
+                failure: function (data) {
+                    console.log('autcomplete failed');
+                }
+            })
+        },
+        minLength: 1,
+        select: function (event, ui) {
+            //console.log('comes in selected item');
+            event.preventDefault();
+            window.location.href = "/cause/show/" + ui.item.id;
+ 
+        }
+    })
+    .data("ui-autocomplete")._renderItem = function (ul, item) {
+
+        //console.log("logo= ", item.logo);
+
+        return $('<li class="ui-menu-item-with-icon"></li>')
+            .data("item.ui-autocomplete", item.charityname)
+            .append('<a><img src="' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
+            .appendTo(ul);
+    };
+
+
+</script>
