--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,9 @@
         <!-- Slide 1 -->
         <div class="ls-slide" data-ls="transition2d:1;timeshift:-1000;">
             <!-- slide background -->
+
+            <%= image_tag "full-bg-7.png", :html => { :class => 'ls-bg' } %>
+
             <img src="images/backgrounds/full-bg-7.jpg" class="ls-bg" alt="Slide background"/>
             
             <!-- Left Text -->
