modified main page banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,6 +86,19 @@ ul.ui-autocomplete {
 </div>
 
 <!-- Essentials -->
+
+<!--
+<%= javascript_include_tag "modernizr.custom.js" %>
+<%= javascript_include_tag "bootstrap.min.js" %>
+<%= javascript_include_tag "jquery.mousewheel-3.0.6.pack.js" %>
+<%= javascript_include_tag "jquery.easing.js" %>
+<%= javascript_include_tag "jquery.metadata.js" %>
+<%= javascript_include_tag "jquery.hoverup.js" %>
+<%= javascript_include_tag "jquery.hoverdir.js" %>
+<%= javascript_include_tag "jquery.stellar.js" %>
+
+-->
+
 <script src="/js/modernizr.custom.js"></script>
 <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="/js/jquery.mousewheel-3.0.6.pack.js"></script>
@@ -94,6 +107,7 @@ ul.ui-autocomplete {
 <script src="/js/jquery.hoverup.js"></script>
 <script src="/js/jquery.hoverdir.js"></script>
 <script src="/js/jquery.stellar.js"></script>
+
 
 <!-- Boomerang mobile nav - Optional  -->
 <script src="/assets/responsive-mobile-nav/js/jquery.dlmenu.js"></script>
