--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,44 +4,58 @@
 	<section id="slider-wrapper" class="layer-slider-wrapper layer-slider-dynamic">
     <div id="layerslider" style="width:100%;height:520px;"> 
         <!-- Slide 1 -->
-        <div class="ls-slide" data-ls="transition2d:1;timeshift:-1000;">
+        <div class="ls-slide">
             <!-- slide background -->
 
-            <%= image_tag "full-bg-7.png", :html => { :class => 'ls-bg' } %>
+            <!--  image_tag "full-bg-7.png", :html => { :class => 'ls-bg' } %> -->
 
-            <img src="images/backgrounds/full-bg-7.jpg" class="ls-bg" alt="Slide background"/>
+            <img src="images/backgrounds/full-bg-9.jpg" class="ls-bg" alt="Slide background"/>
+            
+            <!-- Right Image -->
+            <img src="images/giftcards_main.jpg" class="ls-l" style="top:50%; left:70%;" alt="Image layer">
             
             <!-- Left Text -->
-            <h3 class="ls-l title-lg c-white text-shadow text-uppercase text-center strong" style="width:100%; top:25%; left:50%;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-                Welcome to Boomerang
-            </h3>
-           <h3 class="ls-l title c-white text-wrapped black text-uppercase text-center strong" style="top:50%; left:50%;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:1000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-                Vision.Believe.Success
-            </h3>
- 
-            <h3 class="ls-l title-xs c-white text-shadow text-uppercase text-center strong" style="width:100%; top:72%; left:50%;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:1500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-                Start the tour
-            </h3>
-        </div>
-
-        <!-- Slide 2 -->
-        <div class="ls-slide" data-ls="transition2d:1;timeshift:-1000;">
-            <!-- slide background -->
-            <img src="images/backgrounds/full-bg-9.jpg" class="ls-bg" style="width: 100%;" alt="Slide background"/>
+            <h3 class="ls-l title title-sm strong" style="width:550px; top:15%; left:80px;">Donate Your Unused Gift Cards</h3>
+            <h3 class="ls-l subtitle strong-400" style="width:500px;top:35%; left:80px;">Never let your gift cards go to waste!<br/>Donate your unused gift cards to your favorite cause and feel good about it.</h3>
             
-            <!-- Left Text -->
-            <h3 class="ls-l title text-normal" style="width:600px; top:35%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-                The secret of getting ahead is <span class="strong-600">getting</span> <span class="strong-600 c-base">started</span></strong>
-            </h3>
+            <a href="/cause/index" class="btn btn-base btn-lg ls-l" style="top:50%; left:80px;">Donate</a>
 
-            <p class="ls-l text-standard" style="width:500px; top:50%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:1000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-            Boomerang is ready to be part of your project. Let's get started
-            </p>
 
-            <a href="" class="btn btn-base btn-lg ls-l" style="top:60%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1500;delayin:1500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">
-                Learn more
-            </a>
+            
+            <div class="ls-l input-group add-on" style="width:400px; top:70%; left:80px;">
+
+                <div class="form-body">
+                                <form action="" id="frmLogin" class="sky-form">                                    
+                                    <fieldset>                  
+                                        <section>
+                                            <div class="form-group">
+                                                
+                                                <label class="input">
+                                                    <i class="icon-append fa fa-search"></i>
+                                                    <input type="text" name="giftcard" 
+                                                    placeholder="Check Your Gift Card Balance"
+                                                    style="font-size:large">
+                                                </label>
+                                            </div>     
+                                        </section>
+                                       
+                                    </fieldset>  
+                                </form>    
+                            </div>
+            </div>
+
+
+               
+            <p class="ls-l" style="width:500px;top:75%; left:80px;font-size:medium;color:white">
+                Start typing and select the retailer on your gift card.</p>
+            
+            <h3 class="ls-l subtitle strong-400" style="width:500px;top:80%; left:80px;">Store all your gift cards in one location.</h3>
+            
+           
+
         </div>
+
+        
         
     </div>
 </section>
