--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,8 +50,15 @@
                     <i class="fa fa-bars icon-custom"></i>
                 </button>
 
+                <style>
+                    a:hover { 
+                        background-color: white;
+                    }
+                </style>
+
                 <a class="navbar-brand" href="/home" title="Boomerang | One template. Infinite solutions">
-                    <img src="/images/ChangefinderLogo-blue.png" alt="Changefindr">
+                    <img src="/images/ChangefinderLogo-blue.png"  alt="Changefindr">
+                   
                 </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -60,7 +67,7 @@
                         <div class="bg-light-gray">
                             <form class="form-horizontal form-light p-15" role="form">
                                 <div class="input-group input-group-lg">
-                                    <input type="text" class="form-control" placeholder="I want to find ...">
+                                    <input type="text" class="form-control" placeholder="Search For A Cause">
                                     <span class="input-group-btn">
                                         <button class="btn btn-white" type="button">
                                             <i class="fa fa-search"></i>
@@ -72,6 +79,11 @@
                     </li>
                     <li class="dropdown dropdown-meganav mega-dropdown-fluid">
                         <a href="/home">Home</a>
+                        
+                    </li>
+
+                    <li class="dropdown dropdown-meganav mega-dropdown-fluid">
+                        <a href="/cause/index">Browse Causes</a>
                         
                     </li>
 
